# SewaneeShuttleTracker

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  ws_manager.py
app/routers/: admin.py  auth.py  history.py  misc.py  shuttles.py  trips.py  ws.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  type.ts  types.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx
frontend/src/components/landing/: PublicHero.tsx  SignedInHome.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx
frontend/src/components/map/: FitBounds.tsx  PanTo.tsx  markers.ts
frontend/src/components/ui/: Input.tsx
frontend/src/hooks/: useGeolocation.ts  useLiveShuttles.ts  useTrip.ts  useWakeLock.ts
frontend/src/lib/: cn.ts  datetime.ts  distance.ts  map.ts
frontend/src/pages/: Admin.tsx  History.tsx  Landing.tsx  Login.tsx  MapView.tsx  NotFound.tsx  Register.tsx  Schedule.tsx  Track.tsx
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: seed.py
